reduce flickering by setting a fixed logo size

--- a/templates/main.css
+++ b/templates/main.css
@@ -43,7 +43,7 @@ button {
 }
 
 .logo {
-  max-width: 100%;
+  width: clamp(8rem, 20vw, 12rem);
   height: clamp(8rem, 20vw, 12rem);
   animation: hover 3.5s infinite alternate ease-in-out;
   margin: 2rem 4vw;
